# MonoRepoIdeas

./: .editorconfig  .gitignore  AGENTS.md  README.md
projects/trading_strategy_tester/: AGENTS.md  README.md  pyproject.toml  requirements.txt
projects/trading_strategy_tester/artifacts/: README.md
projects/trading_strategy_tester/artifacts/reports/: nvda_5min_rth_2026-01-01_2026-05-14.html  nvda_5min_rth_2026-01-01_2026-05-14_summary.md  nvda_exit_policy_analysis_2026-01-01_2026-05-14.csv  nvda_exit_policy_analysis_2026-01-01_2026-05-14.md  nvda_final_strategy_candidates_2026-01-01_2026-05-14.csv  nvda_final_strategy_review_2026-01-01_2026-05-14.md  (+16 more)
projects/trading_strategy_tester/config/: ibkr_config.yaml  instruments.yaml  strategy_config.yaml
projects/trading_strategy_tester/docs/: 00-project-brief.md  01-ibkr-paper-connection.md  02-architecture.md  03-strategy-state-machine.md  04-backtesting-optimization.md  05-risk-execution-reporting.md  06-first-version-scope.md  07-user-setup-checklist.md  08-codex-handoff.md  README.md
projects/trading_strategy_tester/scripts/: check_ibkr_connection.py  download_historical_range.py  probe_historical_data.py  probe_market_data_status.py  render_cached_chart.py  run_exit_policy_analysis.py  run_final_strategy_review.py  run_orb_vwap_backtest.py  run_orb_vwap_sweep.py
projects/trading_strategy_tester/src/: README.md
projects/trading_strategy_tester/tests/: README.md  test_data_cache.py  test_exit_analysis.py  test_ibkr_config.py  test_market_data_probe.py  test_orb_vwap_backtest.py  test_range_downloader.py
(+56 files in other folders)
